# Solana-Neck-Marathon

./: .gitignore  Anchor.toml  DEPLOYMENT.md  README.md  package.json
programs/cgd_store/: Cargo.toml
programs/cgd_store/src/: lib.rs
scripts/: import-phantom-solana-key.mjs  set-program-id.mjs
