[package]
name = "cgd_store"
version = "0.1.0"
description = "CGD product purchase and wallet sync program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cgd_store"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
